logs/loopdb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PartsDB-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/loopDB'...
Listing './lib/python3.5/site-packages/loopDB-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/partsdb'...
Listing './lib/python3.5/site-packages/partsdb/system'...
Listing './lib/python3.5/site-packages/partsdb/tools'...
Listing './lib/python3.5/site-packages/partsdb/tools/Annotators'...
Compiling './lib/python3.5/site-packages/partsdb/tools/Annotators/BlastAnnotator.py'...
***   File "./lib/python3.5/site-packages/partsdb/tools/Annotators/BlastAnnotator.py", line 18
    print buff[0]
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/partsdb/tools/Annotators/PfamAnnotator.py'...
***   File "./lib/python3.5/site-packages/partsdb/tools/Annotators/PfamAnnotator.py", line 36
    print 'Failed to locate cds'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/partsdb/tools/CoordinateMapper'...
Compiling './lib/python3.5/site-packages/partsdb/tools/CoordinateMapper/CoordinateMapper.py'...
***   File "./lib/python3.5/site-packages/partsdb/tools/CoordinateMapper/CoordinateMapper.py", line 341
    print g1,
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/partsdb/tools/CoordinateMapper/MapPositions.py'...
***   File "./lib/python3.5/site-packages/partsdb/tools/CoordinateMapper/MapPositions.py", line 423
    print "object:", pos_obj
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/partsdb/tools/Exporters'...
Compiling './lib/python3.5/site-packages/partsdb/tools/Exporters/GenBankExporter.py'...
***   File "./lib/python3.5/site-packages/partsdb/tools/Exporters/GenBankExporter.py", line 44
    print 'outputFileName IS'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/partsdb/tools/Populators'...
Compiling './lib/python3.5/site-packages/partsdb/tools/Populators/PlantPopulator.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (PlantPopulator.py, line 77)
Compiling './lib/python3.5/site-packages/partsdb/tools/annotateBlastp.py'...
***   File "./lib/python3.5/site-packages/partsdb/tools/annotateBlastp.py", line 39
    print hitName
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/partsdb/tools/cutGenes.py'...
***   File "./lib/python3.5/site-packages/partsdb/tools/cutGenes.py", line 164
    print 'Old exons', transcriptName, transcript["exons"], transcript["exonsTranscript"]
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/partsdb/tools/cutGenesBio.py'...
***   File "./lib/python3.5/site-packages/partsdb/tools/cutGenesBio.py", line 196
    print geneName, gene.annotations["Locus"]
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './share'...
Listing './share/python-wheels'...
